# duckie-coverage

./: .gitignore  README.md  frames_2026-04-28_19.05.41.gv
.devcontainer/: Dockerfile  devcontainer.json  orin.dockerfile  orindevcontainer.json  readme.txt
docs/: TODO.md  controller_logic.md  coverage.md  coverage_server_params.md  derivables.md  experiments_to_try.md  launch_coverage.md  nav2_notes.md  odometry_fix_summary.md  orin-container.md  pointcloud_oak_doc.md  pointcloud_zed_doc.md  progress.md  roboteq_driver.md  running_everything.md  trajectories.md  vio-and-slam.md
eval/: RESULTS.md  compare_trajectories.py  record_eval_bag.sh  run_eval_real.py
eval/output/: summary.md
eval/output/depart4/: summary.md
eval/output/department1e/: eval_report.md  summary.md
scripts/: evaluate.py
src/: CLAUDE.md  README.md
src/apriltag_bringup/: package.xml  setup.cfg  setup.py
src/apriltag_bringup/launch/: apriltag.launch.py
src/bot_nav_client/: package.xml  setup.cfg  setup.py
src/bot_nav_client/bot_nav_client/: named_waypoint_client.py  navigate_to_pose_client.py
src/bot_nav_client/config/: waypoints.yaml
src/coverage_client/: README.md  package.xml  setup.py
src/coverage_client/coverage_client/: coverage_client_node.py
src/docs/: coverage_setups.md
src/drive/drive_bringup/: CMakeLists.txt  package.xml
src/drive/drive_bringup/launch/: drive.launch.py
src/drive/kinematics/: CMakeLists.txt  package.xml
src/drive/kinematics/launch/: kinematics.launch.py
src/drive/kinematics/src/: inverse_kinematics.cpp  kinematics.cpp
src/drive/robot_msgs/: CMakeLists.txt  package.xml
src/drive/roboteq_driver/: CMakeLists.txt
src/drive/roboteq_driver/include/roboteq_driver/: driver.h
src/drive/roboteq_driver/src/: driver_manager.cpp
src/ground_truth_publisher/: package.xml  setup.cfg  setup.py
src/ground_truth_publisher/ground_truth_publisher/: ground_truth_publisher_node.py
src/ground_truth_publisher/launch/: ground_truth_publisher.launch.py
src/launch/: README.md  dump_topic.py  plot_trajectory.py  record_bag.launch.py  record_session.launch.py
src/moborobo_robot/: package.xml  setup.cfg  setup.py
src/moborobo_robot/config/: controller.yaml  moborobo.yaml
src/moborobo_robot/description/: camera.xacro  controller.xacro  gps.xacro  imu.xacro  lidar.xacro  oak_d_pro.xacro  robot.urdf.xacro  robot_core.xacro
src/moborobo_robot/launch/: empty_world.launch.py  minimal_gazebo.launch.py  roaming.launch.py  robot_state_publisher.launch.py
src/moborobo_robot/moborobo_robot/: dynamic_obstacle_mover.py  ground_truth_odom.py
src/moborobo_robot/world/: gravel.world  gravel_experiment.world  gravel_featureless.world  gravel_large_loop.world
src/nav_launch/: CMakeLists.txt  package.xml
src/nav_launch/config/: nav_params_sim.yaml
src/nav_launch/launch/: cmd_vel_bridge.launch.py  nav2_sim.launch.py  navigation_launch.py
src/nav_launch/nav_launch/: cmd_vel_to_wheels.py
src/opennav_coverage/opennav_coverage_bt/behavior_trees/: navigate_w_basic_complete_coverage.xml
src/opennav_coverage/opennav_coverage_demo/opennav_coverage_demo/: demo_coverage.py
src/opennav_coverage/opennav_coverage_navigator/include/opennav_coverage_navigator/: coverage_navigator.hpp
src/opennav_coverage/opennav_coverage_navigator/src/: coverage_navigator.cpp
src/robot_nav/: package.xml  setup.py
src/robot_nav/config/: nav2_params.yaml
src/robot_nav/launch/: full.launch.py  nav2.launch.py  tf_tree.launch.py
src/robot_nav/src/: tester.py
src/roboteq_driver/roboteq_driver/: README.md  package.xml
src/slam/: package.xml  setup.py
src/slam/launch/: rtabmap_slam.launch.py
src/vio/: package.xml  setup.py
src/vio/launch/: rtabmap_odom.launch.py
src/waypoint_nav/: package.xml  setup.py
src/waypoint_nav/config/: nav2_params.yaml
src/waypoint_nav/launch/: waypoint_nav.launch.py
