<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_nav</name>
  <version>0.1.0</version>
  <description>
    Nav2 configuration and bringup: nav2_params.yaml and the launch file
    that starts Nav2 nodes for the differential-drive robot.
  </description>
  <maintainer email="leensaid24@gmail.com">Leen Said</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>

  <buildtool_depend>ament_python</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
