<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vio</name>
  <version>0.1.0</version>
  <description>
    Visual-inertial odometry launch files for OAK-D Pro + rtabmap_ros.
  </description>
  <maintainer email="leensaid24@gmail.com">Leen Said</maintainer>
  <license>MIT</license>

  <exec_depend>rtabmap_odom</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <buildtool_depend>ament_python</buildtool_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
