<?xml version="1.0"?>
<package format="3">
  <name>roboteq_driver</name>
  <version>0.0.0</version>
  <description>Roboteq motor controller driver for ROS 2</description>
  <maintainer email="robot@todo.todo">robot</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>robot_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
